--- a/.stylelintrc
+++ b/.stylelintrc
@@ -22,7 +22,7 @@
     "function-comma-space-before": "never",
     "function-parentheses-space-inside": "never",
     "function-whitespace-after": "always",
-    "indentation": 4,
+    "indentation": "tab",
     "media-feature-colon-space-after": "always",
     "media-feature-colon-space-before": "never",
     "media-feature-name-no-vendor-prefix": true,
